# Casio-Editor

./: .gitignore  CMakeLists.txt  README.md  SEQUENCER_HANDOFF.md
.github/workflows/: ci.yml
app/: AppVersion.h  ArrangerPanel.cpp  ArrangerPanel.h  CMakeLists.txt  EditorLookAndFeel.cpp  EditorLookAndFeel.h  EnvelopeDisplay.cpp  EnvelopeDisplay.h  HexLayerPanel.cpp  HexLayerPanel.h  Main.cpp  OrganPanel.cpp  OrganPanel.h  PCMEnginePanel.cpp  PCMEnginePanel.h  ParamControl.cpp  ParamControl.h  ParamPageDisplay.cpp  ParamPageDisplay.h  SequencerPanel.cpp  SequencerPanel.h  SoloSynthPanel.cpp  SoloSynthPanel.h  WavePicker.cpp  WavePicker.h
core/: CMakeLists.txt
core/include/casioxw/: CoreVersion.h  MidiIO.h  NoteNames.h  ParamModel.h  Scheduler.h  Sequence.h  Song.h  SysExCodec.h  Version.h
core/src/: CoreVersion.cpp  MidiIO.cpp  NoteNames.cpp  ParamModel.cpp  Scheduler.cpp  Sequence.cpp  Song.cpp  SysExCodec.cpp  Version.cpp
params/: xwp1.json  xwp1.schema.json
reference/: PROTOCOL.md  midi-spec.md
reference/lua/: 000_table2file.lua  001_table_dump.lua  002_what.lua  003_how.lua  004_json4lua.lua  005_debugger.lua.lua  006_inspect.lua  007_INFOHandler.lua  008_INFORHandler.lua  009_INFOQHandler.lua  010_initPanel.lua  011_initTables.lua  012_initWaves.lua  013_initPresets.lua  014_globalFunctions.lua  015_midiReceive.lua  016_LayerHandler.lua  017_ENVpaint.lua  018_SYSControllers.lua  019_ToneSoloSynth.lua  020_ToneHexLayer.lua  021_XWMixer.lua  022_XWOrgan.lua  023_DSPHandler.lua  024_EXTPrograms.lua  _all_lua.lua
tests/: CMakeLists.txt  CoreTests.cpp  GoldenTests.cpp  HexLayerTests.cpp  MidiIOTests.cpp  NoteNamesTests.cpp  OrganTests.cpp  ParamModelTests.cpp  PcmMelodyTests.cpp  SchedulerTests.cpp  SequenceTests.cpp  SongTests.cpp
tests/golden/: xwp1_golden.json
tools/: gen_golden.lua  gen_xwp1.py  validate.js
tools/gui-preview/: CMakeLists.txt  Main.cpp
tools/midi-probe/: CMakeLists.txt  Main.cpp
